# serrano-plugin-cpu

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: deb.yml  pull_request.yml
src/: gemm.c  gemm.h  minmax.c  minmax.h  vaccel.c
